Busca por embarcação

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -106,6 +106,8 @@
 	
         <h1>Painel Administrativo</h1>
         <p>Bem-vindo, {{ current_user.username }}</p>
+		
+		<div><h2><a href="/lista-pedidos">Ver lista de pedidos de autorização</a></h2></div>
 
         <div class="stats">
             <div class="card">
