Sistema de login

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -147,6 +147,11 @@
     <div class="stats">
         <canvas id="graficoBarras"></canvas>
     </div>
+	
+	<div>
+	<a href="/users">Listar usuários</a><br>
+	<a href="/users/create">Criar novo usuário</a><br>
+	</div>
 
     <div class="logout">
         <a href="{{ url_for('auth.logout') }}">🚪 Sair</a>
